--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -28,6 +28,17 @@
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css"
 integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
 crossorigin=""/>
+<!-- Hotjar Tracking Code for www.scentree.co -->
+<script>
+    (function(h,o,t,j,a,r){
+        h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+        h._hjSettings={hjid:1894594,hjsv:6};
+        a=o.getElementsByTagName('head')[0];
+        r=o.createElement('script');r.async=1;
+        r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+        a.appendChild(r);
+    })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+</script>
 </head>
 
 <body class="d-flex flex-column h-100">
@@ -57,7 +68,7 @@ crossorigin=""/>
     <a class="dropdown-item btn save_map_status_on_leaving petitbtn mb-1" role="button" href="../_/legal.html"><span lang="fr">Mentions légales</span><span lang="en">Legal Mentions</span></a>
     <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank" title="Découvrez notre page Linkedin"></a>
     <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank" title="Découvrez notre page Instagram"></a>
-    </div>
+  </div>
   <span><i class="fas fa-info-circle notifi3"></i></span>
 </div>
 </nav>
@@ -83,20 +94,28 @@ crossorigin=""/>
     <button class="btn to_french_button float-right" type="button"><img src="../img/france.png" alt="ScenTree en français"  class="imgfr"></button>
   </div>
   <div class="col-12 text-center">
-    <h1>
-      <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html"><img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. "></a>
-    </h1>
+      <a class="btn save_map_status_on_leaving" role="button" href="../_/menu.html">
+        <img class="img-fluid logomenu boutonclickable pl-2 d-block max-height-120px" src="../img/logon.png" alt="ScenTree, la nouvelle encyclopédie des ingrédients de parfum." title="ScenTree, la nouvelle encyclopédie des ingrédients de parfum. ">
+      </a>
+  </div>
+</div>
+
+<div class="col-12 mb-2 text-center" style="vertical-align: middle; ">
+  <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branch of perfumed ingredients</h1>
+</div>
+
+<div class="row text-center mt-3 mb-3" style="align-items: center;">
+  <div class="col-12 text-center">
+  <a class="btn text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Come back to the classification </b></span></a>
   </div>
 </div>
 
 <div class="row align-items-start text-center">
   <!--Boutons support et news -->
   <div class="col">
-    <a class="btn mt-4 text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Come back to the classification </b></span></a>
+    <a class="btn mt-3 mb-3 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/support.html"><span lang="fr"><b>Ils nous soutiennent   </b></span><span lang="en"><b>They support us  </b></span><span><i class="fas fa-info-circle notifi1"></i></span></a>
     <br>
-    <a class="btn mt-4 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/support.html"><span lang="fr"><b>Ils nous soutiennent   </b></span><span lang="en"><b>They support us  </b></span><span><i class="fas fa-info-circle notifi1"></i></span></a>
-    <br>
-    <a class="btn mt-1 mb-4 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
+    <a class="btn mt-1 mb-2 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
   </div>    
 </div>
 
@@ -104,8 +123,8 @@ crossorigin=""/>
 
 <div class="row h-15 align-items-end">
   <div class="container-fluid text-center">
-  <div class="col-12 p-0 mt-5 mb-1">
-        <a class="col-12  mt-1 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
+  <div class="col-12 p-0 mb-1">
+        <a class="col-12  m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="/newsletter/newsletter/subscribe">
           <span lang="fr">Newsletter</span><span lang="en">Newsletter</span>
         </a>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/Sources.html">
@@ -117,12 +136,12 @@ crossorigin=""/>
         <a class="col-12 m-0 p-0 btn btn-sm save_map_status_on_leaving text-center" role="button" href="../_/legal.html">
          <span lang="fr">Mentions Légales</span><span lang="en">Legal Mentions</span>
         </a>
-      <div class="col-12 mb-1 p-0 text-center">
+      <div class="col-12 mt-1 text-center">
           <a class="fab fa-linkedin ml-2" href="https://www.linkedin.com/company/scentree/" target="_blank" title="Découvrez notre page Linkedin"></a>
           <a class="fab fa-instagram ml-3" href="https://www.instagram.com/scentree.co/" target="_blank" title="Découvrez notre page Instagram"></a>
       </div>
     </div>
-   <div class="copyright row  d-none d-sm-none d-md-block">
+   <div class="copyright row mt-2 d-none d-sm-none d-md-block">
         <sup>©</sup> Copyright 2019-2020 |  ScenTree SAS  | All Rights Reserved |
    </div>
   </div>
@@ -131,25 +150,28 @@ crossorigin=""/>
 </div>
 </div>
 
+
 <div id="mapblock" class="col-md-9 order-md-first p-0  h-100  fill2">
 
 
-<div id="RGPD_warning" class="col-sm-10 col-md-10 col-lg-10 col-xl-10">
-<div id="blanc1" class="row blockrgpd"></div>
-<div id="contenant" class="row">
-<div class=" col-offset-1 col-9 textRGPD" >
-  <p lang="fr"><i>Notre site internet utilise des cookies à des fins de statistiques, de perfomances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</i></p>
-  <p lang="en"><i>Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</i></p>
-</div> 
-<div class=" col-offset-2 col-3 boutonRGPD">
-  <button class="btn btn-success" id="cookie_please">
-    <span lang="fr">Accepter et continuer</span><span lang="en">Accept and continue</span>
-  </button><button class="btn btn-default btn-md NONRGPD" id="no_cookie">
-    <span lang="fr">Non</span><span lang="en">No</span>
-  </button>
-</div>
-</div>
-<div id="blanc1" class="row blockrgpd"></div>
+<div id="RGPD_warning" class="col-sm-10 col-8">
+    <div class="row blockrgpd"></div>
+    <div id="contenant" class="row">
+      <div class=" col-offset-1 col-9 col-xs-12 textRGPD" >
+        <p lang="fr">Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</p>
+        <p lang="en">Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</p>
+      </div> 
+      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="">
+        <button class="btn" style="background-color:#D64E26; color:black;"  id="cookie_please">
+          <span lang="fr">Accepter tout</span>
+          <span lang="en">Accept all</span>
+        </button>
+        <button class="btn btn-default btn-md NONRGPD" id="no_cookie">
+          <span lang="fr">Non</span>
+          <span lang="en">No</span>
+        </button>
+      </div>
+    </div>
 </div>
 <!--<div id="map" class="h-100-with-padding-60px-before-md"></div>-->
 
