--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -198,6 +198,19 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">12 Juillet 2020</span><span lang="en">12<sup>nd</sup> july 2020</span></h2>
+          <p>
+              <span lang="fr">Intégration d'une nouvelle catégorie d'information pour les synthétiques :  Les appellations synonymes ! <br> Déja présent dans la barre de recherche, retrouvez les noms noms directement dans l'onglet "Autres remarques".  </span>
+              <span lang="en">Integration of a new information category for synthetics ingredients: Synonymous names! <br> Already in the search bar, find all the other names directly in the "Other Comments" tab.</span>
+          </p>
+          <p>
+              <span lang="fr">Optimisation de la fluidité générale du site. Résolution de bog mineurs.</span>
+              <span lang="en">Optimization of the general website fluidity. Resolution of minor bugs.</span>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">05 Juillet 2020</span><span lang="en">5<sup>th</sup> july 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 5 nouvelles matières premières</span><span lang="en" class="ajoutMP">5 new ingredients added </span>
           </h2>
