--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1889,7 +1889,7 @@ crossorigin=""/>
             <p>
               <h2 class="item d-inline">
                 <span lang="fr">Autres noms <sup class="fas fa-question-circle iconetab" title="Il arrive souvent qu'une même matière première soit appelée différement par les sociétés la commercialisant. La liste ci-après donne les autres noms également rencontrés."></sup> :</span>
-                <span lang="en">other names <sup class="fas fa-question-circle iconetab" title="It happens that the same raw material is named differently by the companies marketing it. The list below gives the other names also encountered."></sup> :</span>
+                <span lang="en">Other names <sup class="fas fa-question-circle iconetab" title="It happens that the same raw material is named differently by the companies marketing it. The list below gives the other names also encountered."></sup> :</span>
               </h2>
               <h3 class="textitem d-inline">
                 <span id="modalbody-synonymes"></span>
