--- a/html/_/support.html
+++ b/html/_/support.html
@@ -303,13 +303,13 @@ crossorigin=""/>
           <ul style="font-size: 0.8em;">
             <li>VASKOU Marie</li>
           </ul>
-        <p class="mt-3 m-0 p-0 text-center">
+        <p class="mt-5 p-0 text-center">
           <span lang="fr"><b>Graphismes, visuels et <a href="video.html">vidéo </a></b> </span>
           <span lang="en"><b>Graphism, visuals and <a href="video.html">video </a></b> </span>
         </p>
           <ul style="font-size: 0.8em;">
+          	<li>JACQUOT Muriel (Apport de l'expertise de Myrissi pour la couleur des familles et descripteurs)</li>
             <li>ERCOLANELLI Clara (Logo)</li>
-            <li>SHOGUN SHOOTER (Vidéo)</li>
           </ul>
       </div>
     </div>
