--- a/html/_/support.html
+++ b/html/_/support.html
@@ -308,7 +308,7 @@ crossorigin=""/>
           <span lang="en"><b>Graphism, visuals and <a href="video.html">video </a></b> </span>
         </p>
           <ul style="font-size: 0.8em;">
-          	<li>JACQUOT Muriel (Apport de l'expertise de Myrissi pour la couleur des familles et descripteurs)</li>
+          	<li>JACQUOT Muriel <i>(Apport de l'expertise de Myrissi pour la couleur des familles et descripteurs)</i></li>
             <li>ERCOLANELLI Clara (Logo)</li>
           </ul>
       </div>
