--- a/html/_/support.html
+++ b/html/_/support.html
@@ -304,10 +304,10 @@ crossorigin=""/>
             <li>VASKOU Marie</li>
           </ul>
         <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b>Graphismes, visuels et <a href="video.html">vidéo </a></b> </span>
-          <span lang="en"><b>Graphism, visuals and <a href="video.html">video </a></b> </span>
+          <span lang="fr"><b>Graphismes, visuels et couleurs </a></b> </span>
+          <span lang="en"><b>Graphism, visuals and colors </a></b> </span>
         </p>
-          <ul class="mb-5" style="font-size: 0.8em;">
+          <ul class="mb-4" style="font-size: 0.8em;">
           	<li class="nouveausupporter">JACQUOT Muriel <i>(Apport de l'expertise de Myrissi pour la couleur des familles et descripteurs)</i></li>
             <li>ERCOLANELLI Clara (Logo)</li>
           </ul>
