--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -237,6 +237,7 @@ crossorigin=""/>
           <li>Charles S. Sell, Wiley Edition, “Chemistry and Sense of Smell”, 2014, 471 pages. ISBN : 978-0-470-55130-1</li>
           <li>Ernst T. Theimer, Academic Press Inc. (London), “Fragrance Chemistry The Science of the Sense of Smell”, United Kingdom Edition, 1982, 631 pages. ISBN : 978-1-2993-6448-6</li>
           <li><a class="interpop" href="https://www.sigmaaldrich.com" target ="_BLANK"> https://www.sigmaaldrich.com </a></li>
+          <li>Armanino, N., Charpentier, J., Flachsmann, F., Goeke, A., Liniger, M. and Kraft, P. (2020), What's Hot, What's Not: The Trends of the Past 20 Years in the Chemistry of Odorants . Angew. Chem. Int. Ed.. doi:10.1002/anie.202005719</li>
         </ul>
 </div>
 
