--- a/html/_/support.html
+++ b/html/_/support.html
@@ -247,12 +247,14 @@ crossorigin=""/>
             <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
             <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
             <li>DECOLIN Clémence -<span lang="fr" class="profession"> (Evaluatrice Fine Fragrance)</span><span lang="en" class="profession"> (Fine Fragrance Evaluator)</span></li>
+            <li class="nouveausupporter">DE STAEL Eléonore -<span lang="fr" class="profession"> (Parfumeure - Créatrice chez Eléonore DE STAEL)</span><span lang="en" class="profession"> (Perfumer Creator at Eléonore DE STAEL)</span></li>
             <li>DHORME Morgan -<span lang="fr" class="profession"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en" class="profession"> (Perfumer at Chidho Cosmétiques)</span></li>
             <li>DURIEZ Jean-Michel -<span lang="fr" class="profession"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en" class="profession"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></li>
             <li>FALIU Juliette -<span lang="fr" class="profession"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en" class="profession"> (Consultant and Writer at Le Nez Bavard)</span></li>
             <li>FATTAL A.Elie -<span lang="fr" class="profession"> (Evaluateur Fine Fragrance Junior)</span><span lang="en" class="profession"> (Junior Evaluator Fine Fragrance)</span></li>
             <li>FIZET-PREVOT Hélène -<span lang="fr" class="profession"> (Parfumeur indépendant chez HF PERFUMES)</span><span lang="en" class="profession"> (Perfumer Freelance at HF PERFUMES)</span></li>
             <li>FRACHON Axelle -<span lang="fr" class="profession"> (Formatrice Parfum)</span><span lang="en" class="profession"> (Perfume Trainer)</span></li>
+            <li class="nouveausupporter">GINOLIN Fanny -<span lang="fr" class="profession"> (Assistant Parfumeur chez Eléonore DE STAEL)</span><span lang="en" class="profession"> (Perfumer assistant at Eléonore DE STAEL)</span></li>
             <li>HAGUIER Mathilde -<span lang="fr" class="profession"> (Parfumeur Junior chez IPRA Fragrances)</span><span lang="en" class="profession"> (Junior perfumer at IPRA Fragrances)</span></li>
             <li>JOUANILLOU JOSUE -<span lang="fr" class="profession"> (Etudiant à l'ESP)</span><span lang="en" class="profession"> (ESP student)</span></li>
             <li>LAMBERT Hanna -<span lang="fr" class="profession"> (Apprentie Parfumeur Analyste chez Only Fragrance)</span><span lang="en" class="profession"> (Analyst Perfumer Apprentice at Only Fragrance)</span></li>
@@ -272,8 +274,8 @@ crossorigin=""/>
             <li>TESSON Olivier -<span lang="fr" class="profession"> (Fondateur d'Olivier Parfumerie (Youtube/Instagram) )</span><span lang="en" class="profession"> (Founder of Olivier Parfumerie (Youtube/Instagram) )</span></li>
             <li>TRANI Christelle -<span lang="fr" class="profession"> (Parfumeur chez IPRA Fragrances)</span><span lang="en" class="profession"> (Perfumer at IPRA Fragrances)</span></li>
             <li>VILLEPREUX Céline -<span lang="fr" class="profession"> (Experte Matières Premières – Firmenich)</span><span lang="en" class="profession"> (Raw Materials Expert at Firmenich)</span></li>
-            <li class="nouveausupporter">ZAROKIAN Cécile -<span lang="fr" class="profession"> (CEO et Parfumeur indépendant chez Cécile Zarokian Parfumeur)</span><span lang="en" class="profession"> (CEO / Independant perfumer at Cécile Zarokian Perfumer)</span></li>
-            <li class="nouveausupporter">ZIMER Pauline -<span lang="fr" class="profession"> (Apprentie parfumeur chez Cécile Zarokian Parfumeur)</span><span lang="en" class="profession"> (Trainee Parfumer at Cécile Zarokian Perfumer)</span></li>
+            <li>ZAROKIAN Cécile -<span lang="fr" class="profession"> (CEO et Parfumeur indépendant chez Cécile Zarokian Parfumeur)</span><span lang="en" class="profession"> (CEO / Independant perfumer at Cécile Zarokian Perfumer)</span></li>
+            <li>ZIMER Pauline -<span lang="fr" class="profession"> (Apprentie parfumeur chez Cécile Zarokian Parfumeur)</span><span lang="en" class="profession"> (Trainee Parfumer at Cécile Zarokian Perfumer)</span></li>
           </ul>
         </p>
         <p class="mt-3 m-0 p-0 text-center">
@@ -308,7 +310,7 @@ crossorigin=""/>
           <span lang="en"><b>Graphism, visuals and colors </a></b> </span>
         </p>
           <ul class="mb-4" style="font-size: 0.8em;">
-          	<li class="nouveausupporter">JACQUOT Muriel <i>(Apport de l'expertise de Myrissi pour la couleur des familles et descripteurs)</i></li>
+            <li class="nouveausupporter">JACQUOT Muriel <i>(Apport de l'expertise de Myrissi pour la couleur des familles et descripteurs)</i></li>
             <li>ERCOLANELLI Clara (Logo)</li>
           </ul>
       </div>
