--- a/html/_/support.html
+++ b/html/_/support.html
@@ -101,12 +101,12 @@ crossorigin=""/>
 </div>
 
 <div class="col-12 mb-2 text-center" style="vertical-align: middle; ">
-  <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branch of perfumed ingredients</h1>
+  <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branches of scent</h1>
 </div>
 
 <div class="row text-center mt-3 mb-3" style="align-items: center;">
   <div class="col-12 text-center">
-  <a class="btn text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Come back to the classification </b></span></a>
+  <a class="btn text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Back to classification </b></span></a>
   </div>
 </div>
 
@@ -115,7 +115,7 @@ crossorigin=""/>
   <div class="col">
     <a class="btn mt-3 mb-3 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/support.html"><span lang="fr"><b>Ils nous soutiennent   </b></span><span lang="en"><b>They support us  </b></span><span><i class="fas fa-info-circle notifi1"></i></span></a>
     <br>
-    <a class="btn mt-1 mb-2 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
+    <a class="btn mt-1 mb-2 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree!  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
   </div>    
 </div>
 
@@ -161,12 +161,12 @@ crossorigin=""/>
         <p lang="fr">Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</p>
         <p lang="en">Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</p>
       </div> 
-      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="">
-        <button class="btn" style="background-color:#D64E26; color:black;"  id="cookie_please">
+      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD">
+        <button class="btn btn-success" id="cookie_please">
           <span lang="fr">Accepter tout</span>
           <span lang="en">Accept all</span>
         </button>
-        <button class="btn btn-default btn-md NONRGPD" id="no_cookie">
+        <button class="btn btn-outline-secondary NONRGPD" id="no_cookie">
           <span lang="fr">Non</span>
           <span lang="en">No</span>
         </button>
@@ -216,7 +216,7 @@ crossorigin=""/>
           <a class="btn offset-2 col-4 logopremium" role="button" href="../supporters/cinquieme_sens.html">
             <img class="img-fluid boutonclickable" src="../img/sponsors/Logo-Vecto-5S-20x20.png" alt="le logo de Cinquième Sens">
           </a>
-        </div>
+        </div>-->
         <!--Débloquer une ligne de standard-->
         <div class="mt-3 m-0 p-0 col-12 sponsors">
           <a class="btn offset-2 col-3 logostandards" role="button" href="../supporters/cinquieme_sens.html">
@@ -247,7 +247,7 @@ crossorigin=""/>
             <li>BUCHANAN Jessica -<span lang="fr" class="profession"> (Parfumeur indépendant chez 1000 Flowers)</span><span lang="en" class="profession"> (Perfumer Freelance at 1000 Flowers)</span></li>
             <li>CERVI Yohan -<span lang="fr" class="profession"> (Directeur de la création chez MAELSTROM Parfumeurs)</span><span lang="en" class="profession"> (Director of Creation at MAELSTROM Parfumeurs)</span></li>
             <li>DECOLIN Clémence -<span lang="fr" class="profession"> (Evaluatrice Fine Fragrance)</span><span lang="en" class="profession"> (Fine Fragrance Evaluator)</span></li>
-            <li class="nouveausupporter">DE STAEL Eléonore -<span lang="fr" class="profession"> (Parfumeure - Créatrice chez Eléonore DE STAEL)</span><span lang="en" class="profession"> (Perfumer Creator at Eléonore DE STAEL)</span></li>
+            <li class="nouveausupporter">DE STAEL Eléonore -<span lang="fr" class="profession"> (Parfumeur - Créatrice chez Eléonore DE STAEL)</span><span lang="en" class="profession"> (Perfumer Creator at Eléonore DE STAEL)</span></li>
             <li>DHORME Morgan -<span lang="fr" class="profession"> (Parfumeur Créateur – Chidho Cosmétiques)</span><span lang="en" class="profession"> (Perfumer at Chidho Cosmétiques)</span></li>
             <li>DURIEZ Jean-Michel -<span lang="fr" class="profession"> (Parfumeur Créateur – Parfums Jean-Michel Duriez Paris)</span><span lang="en" class="profession"> (Perfumer at Parfums Jean-Michel Duriez Paris)</span></li>
             <li>FALIU Juliette -<span lang="fr" class="profession"> (Consultante/Rédactrice – Le Nez Bavard)</span><span lang="en" class="profession"> (Consultant and Writer at Le Nez Bavard)</span></li>
