--- a/html/_/support.html
+++ b/html/_/support.html
@@ -161,12 +161,12 @@ crossorigin=""/>
         <p lang="fr">Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</p>
         <p lang="en">Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</p>
       </div> 
-      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD">
+      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="padding-top: 1%;">
         <button class="btn btn-success" id="cookie_please">
           <span lang="fr">Accepter tout</span>
           <span lang="en">Accept all</span>
         </button>
-        <button class="btn btn-outline-secondary NONRGPD" id="no_cookie">
+        <button class="btn NONRGPD" id="no_cookie">
           <span lang="fr">Non</span>
           <span lang="en">No</span>
         </button>
