--- a/html/_/allergenes.html
+++ b/html/_/allergenes.html
@@ -101,12 +101,12 @@ crossorigin=""/>
 </div>
 
 <div class="col-12 mb-2 text-center" style="vertical-align: middle; ">
-  <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branch of perfumed ingredients</h1>
+  <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branches of scent</h1>
 </div>
 
 <div class="row text-center mt-3 mb-3" style="align-items: center;">
   <div class="col-12 text-center">
-  <a class="btn text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Come back to the classification </b></span></a>
+  <a class="btn text-in-color-brown" role="button" href="../_/index.html"><span lang="fr"><b>Revenir à la classification </b></span><span lang="en"><b>Back to classification </b></span></a>
   </div>
 </div>
 
@@ -115,7 +115,7 @@ crossorigin=""/>
   <div class="col">
     <a class="btn mt-3 mb-3 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/support.html"><span lang="fr"><b>Ils nous soutiennent   </b></span><span lang="en"><b>They support us  </b></span><span><i class="fas fa-info-circle notifi1"></i></span></a>
     <br>
-    <a class="btn mt-1 mb-2 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree !  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
+    <a class="btn mt-1 mb-2 text-in-color-brown save_map_status_on_leaving" role="button" href="../_/nouveaute.html"><span lang="fr"><b>Les nouveautés !   </b></span><span lang="en"><b>News from ScenTree!  </b></span><span><i class="fas fa-info-circle notifi2"></i></span></a>
   </div>    
 </div>
 
@@ -161,12 +161,12 @@ crossorigin=""/>
         <p lang="fr">Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</p>
         <p lang="en">Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</p>
       </div> 
-      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="">
-        <button class="btn" style="background-color:#D64E26; color:black;"  id="cookie_please">
+      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="padding-top: 1%;">
+        <button class="btn btn-success" id="cookie_please">
           <span lang="fr">Accepter tout</span>
           <span lang="en">Accept all</span>
         </button>
-        <button class="btn btn-default btn-md NONRGPD" id="no_cookie">
+        <button class="btn NONRGPD" id="no_cookie">
           <span lang="fr">Non</span>
           <span lang="en">No</span>
         </button>
