--- a/html/_/index.html
+++ b/html/_/index.html
@@ -111,7 +111,7 @@ crossorigin=""/>
 </div>
 
 <div class="col-12 mb-2 text-center" style="vertical-align: middle;">
-    <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branch of perfumed ingredients</h1>
+    <h1 class="d-none d-sm-none d-md-block slogan">Exploring the branches of scent</h1>
 </div>
 
 <div class="row align-items-start mt-3 mb-3">
@@ -135,7 +135,7 @@ crossorigin=""/>
     <br>
     <a class="btn mt-1 mb-2 text-in-color-brown  save_map_status_on_leaving  the_news__link" role="button" href="../_/nouveaute.html">
       <span lang="fr"><b>Les nouveautés !   </b></span>
-      <span lang="en"><b>News from ScenTree !  </b></span>
+      <span lang="en"><b>News from ScenTree!  </b></span>
       <span><i class="fas fa-info-circle notifi2"></i></span>
     </a>  
   </div>    
@@ -196,12 +196,12 @@ crossorigin=""/>
         <p lang="fr">Notre site internet utilise des cookies à des fins de statistiques, de performances et de sécurité. Ces données anonymes nous permettent de vous offrir une expérience de navigation optimale. Vous pouvez toutefois désactiver les cookies dans les paramètres de votre navigateur.</p>
         <p lang="en">Our website is using cookies for statistics, performance and security. These anonymous data allow us to give you an optimal navigation experience. You still can disable the cookies in your navigator’s parameters.</p>
       </div> 
-      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="">
-        <button class="btn" style="background-color:#D64E26; color:black;"  id="cookie_please">
+      <div class=" col-offset-2 col-3 col-xs-12 boutonRGPD" style="padding-top: 1%;">
+        <button class="btn btn-success" id="cookie_please">
           <span lang="fr">Accepter tout</span>
           <span lang="en">Accept all</span>
         </button>
-        <button class="btn btn-default btn-md NONRGPD" id="no_cookie">
+        <button class="btn NONRGPD" id="no_cookie">
           <span lang="fr">Non</span>
           <span lang="en">No</span>
         </button>
