--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -198,6 +198,20 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
+          <h2 id="heading22"><span lang="fr">26 Juillet 2020</span><span lang="en">26<sup>st</sup> july 2020</span>
+            <br><span lang="fr" class="ajoutMP">Ajout de 5 nouvelles matières premières</span><span lang="en" class="ajoutMP">5 new ingredients added </span>
+          </h2>
+          <p>
+              <a class="interpop"  href="../ingredients/Mandarin_Red_EO__Mandarine_Rouge_HE.html"><span lang="en">Mandarin Red EO (CAS N°: 8008-31-9)</span><span lang="fr">Mandarine Rouge HE (CAS N°: 8008-31-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Turmeric_EO__Curcuma_Longa_HE.html"><span lang="en">Turmeric EO (CAS N°: 8024-37-1)</span><span lang="fr">Curcuma Longa HE (CAS N°: 8024-37-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Parsley_Leaf_EO__Persil_Feuilles_HE.html"><span lang="en">Parsley Leaf EO (CAS N°: 8000-68-8)</span><span lang="fr">Persil Feuilles HE (CAS N°: 8000-68-8)</span></a>
+              <br><a class="interpop"  href="../ingredients/Okoumal®__Okoumal®.html"><span lang="en">Okoumal® (CAS N°: 131812-52-7)</span><span lang="fr">Okoumal® (CAS N°: 131812-52-7)</span></a>
+              <br><a class="interpop"  href="../ingredients/cis-3-Hexenyl_IsoButyrate__Isobutyrate_de_cis-3-Hexènyle.html"><span lang="en">cis-3-Hexenyl IsoButyrate (CAS N°: 41519-23-7)</span><span lang="fr">Isobutyrate de cis-3-Hexènyle (CAS N°: 41519-23-7)</span></a>
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="content">
           <h2 id="heading22"><span lang="fr">12 Juillet 2020</span><span lang="en">12<sup>nd</sup> july 2020</span></h2>
           <p>
               <span lang="fr">Intégration d'une nouvelle catégorie d'information pour les synthétiques :  Les appellations synonymes ! Déja présent dans la barre de recherche, retrouvez les noms noms directement dans l'onglet "Autres remarques".  </span>
@@ -242,11 +256,11 @@ crossorigin=""/>
           <p>
               <span lang="fr" class="ajoutMPavecSponsor">Ajout de 8 nouvelles matières premières</span><span lang="en" class="ajoutMP">8 new ingredients added </span>
               <br><a class="interpop"  href="../ingredients/Methyl_2-Furoate__2-Furoate_de_méthyle.html"><span lang="en">Methyl 2-Furoate (CAS N°: 611-13-2)</span><span lang="fr">2-Furoate de méthyle (CAS N°: 611-13-2)</span></a>
-              <br><a class="interpop"  href="../ingredients/Farnesyl_Acetate__Acétate_de_Farnesyl.html"><span lang="en">Farnesyl Acetate (CAS N°: 29548-30-9)</span><span lang="fr">Acétate de Farnesyl (CAS N°: 29548-30-9)</span></a>
+              <br><a class="interpop"  href="../ingredients/Farnesyl_Acetate__Acétate_de_Farnésyle.html"><span lang="en">Farnesyl Acetate (CAS N°: 29548-30-9)</span><span lang="fr">Acétate de Farnesyl (CAS N°: 29548-30-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Isoamyl_Alcohol__Alcool_Isoamylique.html"><span lang="en">Isoamyl Alcohol (CAS N°: 123-51-3)</span><span lang="fr">Alcool Isoamylique (CAS N°: 123-51-3)</span></a>
               <br><a class="interpop"  href="../ingredients/Apritone®__Apritone®.html"><span lang="en">Apritone<sup>®</sup> (CAS N°: 68133-79-9)</span><span lang="fr">Apritone<sup>®</sup> (CAS N°: 68133-79-9)</span></a>
               <br><a class="interpop"  href="../ingredients/Cardamom_Absolute__Cardamome_Absolue.html"><span lang="en">Cardamom Absolute (CAS N°: 85940-32-5)</span><span lang="fr">Cardamome Absolue (CAS N°: 85940-32-5)</span></a>
-              <br><a class="interpop"  href="../ingredients/Ethyl_Octanoate__Octanoate d_Ethyle.html"><span lang="en">Ethyl Octanoate (CAS N°: 106-32-1)</span><span lang="fr">Octanoate d'Ethyle (CAS N°: 106-32-1)</span></a>
+              <br><a class="interpop"  href="../ingredients/Ethyl_Octanoate__Octanoate_d_Ethyle.html"><span lang="en">Ethyl Octanoate (CAS N°: 106-32-1)</span><span lang="fr">Octanoate d'Ethyle (CAS N°: 106-32-1)</span></a>
               <br><a class="interpop"  href="../ingredients/Parmavert®__Parmavert®.html"><span lang="en">Parmavert<sup>®</sup> (CAS N°: 13257-44-8)</span><span lang="fr">Parmavert<sup>®</sup> (CAS N°: 13257-44-8)</span></a>
               <br><a class="interpop"  href="../ingredients/Labrador_Tea_EO__Thé_du_Labrador_HE.html"><span lang="en">Labrador Tea EO (CAS N°: 93384-25-9)</span><span lang="fr">Thé du Labrador HE (CAS N°: 93384-25-9)</span></a>
           </p>
