--- a/html/_/support.html
+++ b/html/_/support.html
@@ -301,6 +301,13 @@ crossorigin=""/>
             <li>DE VIENNE Damien</li>
           </ul>
         <p class="mt-3 m-0 p-0 text-center">
+          <span lang="fr"><b>Traduction Anglais</b> </span>
+          <span lang="en"><b>English translation</b> </span>
+        </p>
+          <ul style="font-size: 0.8em;">
+            <li>MENAGE Amanda </li>
+          </ul>
+        <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b>Responsable mentions légales et juridiques</b> </span>
           <span lang="en"><b>Legal and juridical mentions</b> </span>
         </p>
