--- a/html/_/support.html
+++ b/html/_/support.html
@@ -305,7 +305,7 @@ crossorigin=""/>
           <span lang="en"><b>English translation</b> </span>
         </p>
           <ul style="font-size: 0.8em;">
-            <li>MENAGE Amanda </li>
+            <li class="nouveausupporter">MENAGE Amanda </li>
           </ul>
         <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b>Responsable mentions légales et juridiques</b> </span>
