--- a/html/_/nouveaute.html
+++ b/html/_/nouveaute.html
@@ -198,7 +198,7 @@ crossorigin=""/>
     <ul>
       <li>
         <div class="content">
-          <h2 id="heading22"><span lang="fr">26 Juillet 2020</span><span lang="en">26<sup>st</sup> july 2020</span>
+          <h2 id="heading22"><span lang="fr">26 Juillet 2020</span><span lang="en">26<sup>th</sup> july 2020</span>
             <br><span lang="fr" class="ajoutMP">Ajout de 5 nouvelles matières premières</span><span lang="en" class="ajoutMP">5 new ingredients added </span>
           </h2>
           <p>
