--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1038,7 +1038,7 @@ crossorigin=""/>
     <div class="ad_to_the_potential_sponsors  col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
       <p class="pro_informations textitem-footer mt-1 mb-0">
         <span lang="fr" class="mb-0">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
-        <span lang="en" class="mb-0">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+        <span lang="en" class="mb-0">Do you sell any of the raw materials listed in the ScenTree classification? Would you like to let our users know? Send an email to <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a> to learn about our advertising opportunities.</span>
       </p>
     </div>
     <!--<div class="commercialize col-12">
@@ -1917,7 +1917,7 @@ crossorigin=""/>
         <div class="ad_to_the_potential_sponsors  col-12 text-center">
           <p class="textitem-footer mt-1 mb-0">
             <span lang="fr" class="mb-0">Vous <u>commercialisez</u> des matières premières présentes dans la classification ScenTree et vous souhaitez que nos utilisateurs le sachent ? <br>Merci de rentrer en contact avec l'adresse mail suivante : <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
-            <span lang="en" class="mb-0">You are <u>commercializing</u> some of the raw materials present in <i><b>ScenTree</b></i> classification and you would like our users to know it? Please contact this email address: <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a></span>
+            <span lang="en" class="mb-0">Do you sell any of the raw materials listed in the ScenTree classification? Would you like to let our users know? Send an email to <a href="mailto:fournisseurs@scentree.co">fournisseurs@scentree.co</a> to learn about our advertising opportunities.</span>
           </p>
         </div>
         <!--<div class="commercialize col-12 m-0 p-0"><b>
