--- a/html/_/Sources.html
+++ b/html/_/Sources.html
@@ -9,8 +9,7 @@
 <!--ADD FAVICON -->
 <link rel="icon" type="image/png" href="../img/logotfav.png" />
 <!-- Titre de la page -->   
-<title lang="fr">ScenTree - Sources</title>
-<title lang="en">ScenTree - Sources</title>
+<title>ScenTree - Sources</title>
 <!--Description Google-->
 <meta name="description" content="Afin de garantir toute transparence, nous avons crée cette page qui réunie l'ensemble des ouvrages, sites internet, documents scientifiques et autres études consultés lors de la création de la base de donnée de ScenTree. " />
 <!-- Bootstrap -->
@@ -185,11 +184,11 @@ crossorigin=""/>
 
 <h2 class="maskedtitle mt-3">
   <span lang="fr">Afin de donner naissance à la classification <i>ScenTree</i> il a été nécessaire d'approfondir nos connaissances en parfumerie en utilisant de nombreux ouvrages traitant des matières premières. La liste ci-dessous constitue la bibligraphie du projet : </span>
-  <span lang="en">To create <i>ScenTree</i> classification, it has been necessary to deepen our perfumery knowledge by using diverse works about raw materials. The following list is the project bibliography: </span>
+  <span lang="en">The <i>ScenTree</i> classification is based on in-depth research in perfume science. Our sources of reference on raw materials are included in the bibliography below: </span>
 </h2>
 
 <div class="sources col-12 mt-3">
-      <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Général</span><span lang="en"> Général</span></b></p></h3>
+      <h3><p class="mt-2 m-0 p-0 text-center"><b class="bplus"><span lang="fr" class="text-center">Général</span><span lang="en"> General</span></b></p></h3>
     <ul>
       <li><a class="interpop" href="https://www.nez-larevue.fr/" target ="_BLANK">Nez éditions</a>, “Nez, la revue olfactive”, #1, #2, #3, #4, #5, #6, #7, #8, 2016-2019.</li>
       <li><a class="interpop" href="https://www.perfumerflavorist.com/" target ="_BLANK"> https://www.perfumerflavorist.com </a></li>
@@ -201,8 +200,14 @@ crossorigin=""/>
       <li><a class="interpop" href="https://www.mane.com" target ="_BLANK"> https://www.mane.com </a></li>
       <li><a class="interpop" href="https://www.fragrantica.com/" target ="_BLANK"> https://www.fragrantica.com/</a></li>     
       <li><a class="interpop" href="https://commons.wikimedia.org/" target ="_BLANK"> https://commons.wikimedia.org/</a></li>
-      <li><span lang="fr">L'ensemble des données techniques présentées dans <i>ScenTree</i> sont issues de FDS provenant des sociétés majeures de l'industrie de la parfumerie.</span><span lang="en">The whole technical data given by <i>ScenTree</i> was sourced from SDS coming for major companies of the perfumery area.</span></li>
-      <li><span lang="fr">Une partie des données présentées dans cette classification ne sont pas sourcées. Elles proviennent en effet de la collaboration avec plusieurs professionnels du monde de la parfumerie, comme le veux notre protocole de classification des matières premières.</span><span lang="en">Part of the data provided by this classification is not sourced. It comes from our collaboration with a few olfaction and perfumery experts, as our raw materials classification protocol wishes to.</span></li>
+      <li>
+      	<span lang="fr">L'ensemble des données techniques présentées dans <i>ScenTree</i> sont issues de FDS provenant des sociétés majeures de l'industrie de la parfumerie.</span>
+      	<span lang="en">All technical data provided by <i>ScenTree</i> has been sourced from safety data sheets (SDS) published or sent to us by major fragrance companies.</span>
+      </li>
+      <li>
+      	<span lang="fr">Une partie des données présentées dans cette classification ne sont pas sourcées. Elles proviennent en effet de la collaboration avec plusieurs professionnels du monde de la parfumerie, comme le veux notre protocole de classification des matières premières.</span>
+      	<span lang="en">In keeping with our protocol for classifying raw materials, some of the data in the <i>ScenTree</i> classification is sourced from our own collaborations with a select number of fragrance industry experts.</span>
+      </li>
     </ul>
 </div>
 
@@ -211,8 +216,8 @@ crossorigin=""/>
         <ul>
           <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 1". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-039-3</li>
           <li>K.V. Peter. WP Woodhead Publishing. "Handbook of herbs and spices - Volume 2". 2nd Edition, 2012. 634 pages. ISBN 978-0-85709-040-9</li>
-          <li>P.Franchomme, R.Jollois, D.Péonël. Editions Roger Jollois. "L'aromathérapie exactement" 2001. 510 pages. ISBN: 2-87819-001-7</li>
-          <li>P.Franchomme. Edition TREDANIEL LA MAISNIE. "La science des huiles essentielles médicinales." 2015. 580 pages. ISBN : 978-2813207630 </li>
+          <li>P. Franchomme, R. Jollois, D. Péonël. Editions Roger Jollois. "L'aromathérapie exactement" 2001. 510 pages. ISBN: 2-87819-001-7</li>
+          <li>P. Franchomme. Edition TREDANIEL LA MAISNIE. "La science des huiles essentielles médicinales." 2015. 580 pages. ISBN : 978-2813207630 </li>
           <li>A.O. Tucker, T. Debaggio. Edited by Francesco DeBaggio. "The encyclopedia of herbs - a comprehensive reference to herbs of flavor and fragrance" 2009. 605 pages. ISBN-13: 978-0-88192-994-2 </li>
           <li>“A list of cultivated plants yielding aroma substances”, 4 pages.</li>
           <li>Nawal Saïchi, Philippe Durand, Institut Klorane, Edititons Pierre Fabre, “Guide des conifères et espèces apparentées”, 2009, 67 pages. Code 458 125</li>
