--- a/html/_/support.html
+++ b/html/_/support.html
@@ -186,11 +186,11 @@ crossorigin=""/>
 
 <p class="mt-3">
   <span lang="fr"> Le projet <i>ScenTree</i> a été imaginé et conçu entre 2017 et 2020. Initialement imaginé afin de réunir et d’harmoniser nos connaissances sur les matières premières, <i>ScenTree</i> s’est rapidement transformé en ce que vous voyez aujourd’hui. Après 2 ans de développement du logiciel et de la base de données, nous sommes fiers de vous présenter notre travail. </span>
-  <span lang="en"> <i>ScenTree</i> was imagined and conceived between 2017 and 2020. Initially, the aim was to gather and harmonize our knowledge regarding raw materials. ScenTree quickly became what you see today. After two years of developing the software and the database, we are proud to show our work today. </span>
+  <span lang="en"> <i>ScenTree</i> was conceived and built between 2017 and 2020. Initially, the aim was to gather and harmonize knowledge of raw materials. It quickly became what you see today. After two years of developing the software and database, we are proud to share our work with you today.</span>
 </p>
 <p class="mt-3">
   <span lang="fr"> Ce projet n’aurait jamais pu voir le jour sans le soutien particulier de nombreuses personnes. Nous tenions à les remercier ici : </span>
-  <span lang="en"> This project could not see the light without the particular support of few people. We wish to thank them here :</span>
+  <span lang="en"> This project would not be possible without the generous support of several individuals and institutions. We extend our gratitude to:</span>
 </p>
 
 <div class="row">
@@ -199,8 +199,7 @@ crossorigin=""/>
       <div class="col-6 col-xs-12 entreprise">
         <div class="mt-3 m-0 p-0 text-center">
           <h2 class="text-center" style="font-size: 1em;">
-            <span lang="fr"><b class="bplus">Sociétés partenaires</b> </span>
-            <span lang="en"><b class="bplus">Partner companies</b> </span>
+            <span><b class="bplus">Sponsors</b> </span>
           </h2>
         </div>
 
@@ -233,8 +232,8 @@ crossorigin=""/>
 
       <div class="col-6 col-xs-12 particulier">
         <h2 class="mt-3 m-0 p-0 text-center" style="font-size: 1em;">
-          <span lang="fr"><b class="bplus">Professionnels ayant participé à la base de données ScenTree</b> </span>
-          <span lang="en"><b class="bplus">Professionals who participated to the ScenTree database :</b> </span>
+          <span lang="fr"><b class="bplus">Contributeurs</b></span>
+          <span lang="en"><b class="bplus">Contributors</b></span>
         </h2>
         <p>
           <!--POUR TOUT LES NOUVEAUX ->  class="nouveausupporter"  -->
@@ -280,7 +279,7 @@ crossorigin=""/>
         </p>
         <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b>Ils parlent de ScenTree : </b> </span>
-          <span lang="en"><b>They talk about ScenTree :</b> </span>
+          <span lang="en"><b><i>ScenTree</i> in the Press</b> </span>
         </p>
           <ul style="font-size: 0.8em;">
             <li><a class="interpop" href="https://www.nez-larevue.fr/magazine/entretiens/scentree-tout-le-monde-a-besoin-dune-source-fiable-pour-les-matieres-premieres-de-parfumerie/" target="_blank">Nez-La Revue</a></li>
@@ -293,7 +292,7 @@ crossorigin=""/>
           </ul>
         <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b>Développement informatique</b> </span>
-          <span lang="en"><b>Informatics development</b> </span>
+          <span lang="en"><b>IT development</b> </span>
         </p>
           <ul style="font-size: 0.8em;">
             <li>JACQUELINET Julien </li>
@@ -302,21 +301,21 @@ crossorigin=""/>
           </ul>
         <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b>Traduction Anglais</b> </span>
-          <span lang="en"><b>English translation</b> </span>
+          <span lang="en"><b>English Translation</b> </span>
         </p>
           <ul style="font-size: 0.8em;">
-            <li class="nouveausupporter">MENAGE Amanda </li>
+            <li><a class="interpop" href="http://www.amandamenage.com/" target="_blank">MENAGE Amanda</a> (contributions)</li>
           </ul>
         <p class="mt-3 m-0 p-0 text-center">
-          <span lang="fr"><b>Responsable mentions légales et juridiques</b> </span>
-          <span lang="en"><b>Legal and juridical mentions</b> </span>
+          <span lang="fr"><b>Mentions légales et juridiques</b> </span>
+          <span lang="en"><b>Legal Information</b> </span>
         </p>
           <ul style="font-size: 0.8em;">
             <li>VASKOU Marie</li>
           </ul>
         <p class="mt-3 m-0 p-0 text-center">
           <span lang="fr"><b>Graphismes, visuels et couleurs </a></b> </span>
-          <span lang="en"><b>Graphism, visuals and colors </a></b> </span>
+          <span lang="en"><b>Graphic Design, Visuals, and Colors </a></b> </span>
         </p>
           <ul class="mb-4" style="font-size: 0.8em;">
             <li class="nouveausupporter">JACQUOT Muriel <i>(Apport de l'expertise de Myrissi pour la couleur des familles et descripteurs)</i></li>
