--- a/html/_/index.html
+++ b/html/_/index.html
@@ -441,7 +441,7 @@ crossorigin=""/>
         </p> 
       </div>
       <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
-              <span id="modalbody-pictA" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
+              <span id="modalbody-pictmap" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
       </div>
     </div>
     <div class="row">
