--- a/html/_/index.html
+++ b/html/_/index.html
@@ -441,7 +441,8 @@ crossorigin=""/>
         </p> 
       </div>
       <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
-              <span id="modalbody-pictmap" class="imgmap"></span> <!--order-first order-sm-first order-lg-last-->
+              <span id="modalbody-pictmap" class="imgmap"></span>
+              <div class="col-12 creditsphoto" style="text-align: center; color: #A5A5A5; font-size: 0.8em; font-style: italic;">Crédits photo: ScenTree SAS</div> <!--order-first order-sm-first order-lg-last-->
       </div>
     </div>
     <div class="row">
