--- a/html/_/index.html
+++ b/html/_/index.html
@@ -398,6 +398,7 @@ crossorigin=""/>
           </div>
           <div class="row col-xs-12 col-sm-12 col-lg-4 blockimg">
               <span id="modalbody-pict" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
+              <div class="col-12 mt-2 creditsphoto">Crédits photo: ScenTree SAS</div>
           </div>
         </div>
     </div>
@@ -442,7 +443,7 @@ crossorigin=""/>
       </div>
       <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
               <span id="modalbody-pictmap" class="imgmap"></span>
-              <div class="col-12 creditsphoto" style="text-align: center; color: #A5A5A5; font-size: 0.8em; font-style: italic;">Crédits photo: ScenTree SAS</div> <!--order-first order-sm-first order-lg-last-->
+              <div class="col-12 mt-2 creditsphoto">Crédits photo: ScenTree SAS</div> <!--order-first order-sm-first order-lg-last-->
       </div>
     </div>
     <div class="row">
