--- a/html/_/index.html
+++ b/html/_/index.html
@@ -397,8 +397,8 @@ crossorigin=""/>
             </p>
           </div>
           <div class="row col-xs-12 col-sm-12 col-lg-4 blockimg">
-              <span id="modalbody-pict" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
-              <div class="col-12 mt-2 creditsphoto">Crédits photo: ScenTree SAS</div>
+              <span id="modalbody-pict" class="imgmp" ></span> <!--order-first order-sm-first order-lg-last-->
+              <div class="col-12 mt-1 creditsphoto">Crédits photo: ScenTree SAS</div>
           </div>
         </div>
     </div>
@@ -1288,6 +1288,7 @@ crossorigin=""/>
           </div>
           <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
               <span id="modalbody-pict1" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
+              <div class="col-12 mt-1 creditsphoto">Crédits photo: ScenTree SAS</div>
           </div>
         </div>
       </div>
@@ -1347,6 +1348,7 @@ crossorigin=""/>
           </div>
           <div class="row col-xs-12 col-sm-12 col-lg-3 blockimg">
               <span id="modalbody-pict1A" class="imgmp" style="text-align: center;"></span> <!--order-first order-sm-first order-lg-last-->
+              <div class="col-12 mt-1 creditsphoto">Crédits photo: ScenTree SAS</div>
           </div>
         </div>
       </div>
