--- a/html/_/index.html
+++ b/html/_/index.html
@@ -219,7 +219,7 @@ crossorigin=""/>
             <h1 class="col-12 col-md-6 nomdescripteur font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
               <span id="modaltitle2" class="modal-title modal-title1"></span>
             </h1>
-            <h3 class="col-12 col-md-6 typedescripteur text-size-18px text-center-before-md text-align-right-strictly-after-md">
+            <h3 class="col-12 col-md-6 typedescripteur text-size-18px text-center-before-md text-align-right-strictly-after-md" style="text-align: end;">
               <span id="modalheader-type2" class="modalheader-type"></span>
             </h3>
           </div>
@@ -259,7 +259,7 @@ crossorigin=""/>
       <h1 class="col-12 col-md-6 font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
         <span id="modaltitle" class="modal-title "></span>
       </h1>
-      <h4 class="type col-12 col-md-6 text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+      <h4 class="type col-12 col-md-6 text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md" style="text-align: end;">
         <span id="modalheader-type" class="modalheader-type2"></span>
       </h4>
       <div id="modaltitle-fili" class="col-12  Filiation text-size-16px text-center"></div>
@@ -1073,7 +1073,7 @@ crossorigin=""/>
         <h1 class="col-12 col-md-6  font-weight-bold text-size-20px text-center-before-md text-align-left-strictly-after-md">
           <span id="modaltitle1" class="modal-title"></span>
         </h1>
-        <h4 class=" type col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md">
+        <h4 class=" type col-12 col-md-6  text-size-18px font-italic-before-md text-center-before-md text-align-right-strictly-after-md" style="text-align: end;">
           <span id="modalheader-type1" class="modalheader-type2"></span>
         </h4>
         <div id="modaltitle1-fili" class="col-12  Filiation  text-size-16px text-center"></div>
