--- a/html/_/index.html
+++ b/html/_/index.html
@@ -689,8 +689,8 @@ crossorigin=""/>
                       <!-- LE TABLEAU CI-DESSOUS EST-IL UTILE ? -->
                       <div class="listy-48th-IFRA-table-with-botanicals IFRA-table">
                         <h3 class="annexeI49 d-inline text-size-14px">
-                          <span lang="fr"><b>Annexe I :</b> FR Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
-                          <span lang="en"><b>Annexe I :</b> EN Ici nous avons un texte qui n'est pas en gras et qui est à la suite de Annexe I</span>
+                          <span lang="fr"><b>Annexe I :</b> </span>
+                          <span lang="en"><b>Annexe I :</b> </span>
                         </h3>
                         <br>
                         <table class="tableannexeI">
@@ -717,10 +717,11 @@ crossorigin=""/>
                     
                     <div class="blockannexeI48 mt-3 listy-48th-IFRA-table-without-botanicals IFRA-table">
                         <h2 class="item annexeI49B d-inline IFRA-infos">Annexe I :</h2>
-                        <h3 class="textitem">
+                        <h3 class="textitem d-inline">
                           <span lang="fr">Certains ingrédients naturels contiennent des composants eux-mêmes réglementés qu'il convient de prendre en compte dans les doses limites recommandées. Dans le cas où vous n'avez pas la possibilité d'avoir des chromatographies précises pour vos qualités d'ingrédients naturels, l'IFRA fourni des tables avec des concentrations à prendre par défaut. Les voici : </span>
                           <span lang="en">Some natural ingredients contain regulated compounds that have to be taken into account in the recommended limits of use. In case you do not have access to chromatograms for your natrual ingredients, the IFRA is giving tables with default values. Here they are :</span>
                         </h3>
+                        <br>
                       <!--Table concentration des synth dans les nat-->
                       <table class="tableannexeI m-0">
                         <!-- EN-TETE DU TABLEAU-->
