--- a/html/_/index.html
+++ b/html/_/index.html
@@ -1583,10 +1583,11 @@ crossorigin=""/>
 
                               <div class="listy-48th-IFRA-table-with-botanicals IFRA-table mt-3">
                                 <h2 class="item d-inline annexeI49B IFRA-infos">Annexe I :</h2>
-                                <h3 class="textitem">
+                                <h3 class="textitem d-inline">
                                   <span lang="fr">Certains ingrédients synthétiques réglementés sont présents dans la nature et se retrouvent dans des concentrations plus ou moins importantes dans plusieurs ingrédients naturels. Cette présence dans les naturels doit donc être prise en compte dans le calcul des concentrations limites recommandées par l'IFRA. Dans le cas où les concentrations vous seraient inconnues, il est possible de se baser sur les concentrations estimées par l'IFRA. Les voici : </span>
                                   <span lang="en">Some regulated synthetic ingredients are found in nature and in certain proportions in natural ingredients. This presence in nature has to be taken into account when calculating limits of use recommended by the IFRA. In case you do not know these concentrations, you can use the ones estimated by the IFRA. Here They are :</span>
                                 </h3>
+                                <br>
                                 <table class="tableannexeI m-0">
                                     <!-- EN-TETE DU TABLEAU-->
                                         <thead>
